<resources>
    <string name="app_name">ListQuestAndroid</string>
    <string name="email">email</string>
    <string name="forgot_password">forgot password?</string>
    <string name="sign_up">sign up</string>
    <string name="remember_me">remember me</string>
    <string name="password">password</string>
    <string name="tab_text_1">Main Quests</string>
    <string name="tab_text_2">Important</string>
    <string name="tab_text_3">Completed</string>
    <string name="no_projects">thou hath no projects</string>
    <string name="no_date_selected">no date selected</string>
    <string name="complete_your_task_to_defeat">complete your task to defeat:</string>
    <string name="date_and_time">date and time</string>
    <string name="done">done</string>
    <string name= "lorem_ipsum">"Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna wirl aliqua. Up exlaborum incididunt."</string>
    <string name="lvl">lvl</string>
    <string name="login">login</string>
    <string name="new_project_title">new project title</string>
    <string name="new_task">New Task</string>
    <string name="take_photo">take photo</string>
    <string name="upload_photo">upload photo</string>
    <string name="delete_account">delete account</string>
    <string name="send_password">send password</string>
    <string name="logout">logout</string>
    <string name="add_your_notes_here">add your notes here</string>
    <string name="thou_hath_not_completed_any_projects">thou hath not completed any projects</string>
    <string name="thou_hath_no_favorite_projects">thou hath no favorite projects</string>
</resources>
