<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="viewModel"
            type="com.stanger.listquest.ui.login.LoginFragmentViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:src="@drawable/welcome_img"
            app:layout_constraintBottom_toTopOf="@id/guideline"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.30" />

        <ImageView
            android:id="@+id/signin_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/email"
            android:tint="@color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            error="@{viewModel.errorEmail}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:textColor="@color/dark_gray"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/signin_ic"
            app:layout_constraintTop_toBottomOf="@+id/guideline"
            app:hintTextAppearance="@style/TextAppearance.App.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:padding="13dp"
                android:text="@={viewModel.email}"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:theme="@style/FirebaseUI.TextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/lock_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginStart="10dp"
            android:src="@drawable/lock"
            android:tint="@color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/login_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            error="@{viewModel.errorPassword}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/lock_ic"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:theme="@style/FirebaseUI.TextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <CheckBox
            android:id="@+id/materialCheckBox2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/darker_gray"
            android:buttonTint="@color/darker_gray"
            android:layout_marginTop="10dp"
            android:checked="@={viewModel.isRememberMe()}"
            android:clickable="true"
            android:focusable="true"
            android:text="@string/remember_me"
            android:textColor="@color/darker_gray"
            app:layout_constraintStart_toStartOf="@+id/login_password"
            app:layout_constraintTop_toBottomOf="@id/login_password" />

        <Button
            android:id="@+id/button4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/com_facebook_blue"
            android:onClick="@{() -> viewModel.logIn()}"
            android:layout_marginBottom="30dp"
            android:text="@string/login"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/button3"
            app:layout_constraintEnd_toEndOf="@+id/button3"
            app:layout_constraintStart_toStartOf="@+id/button3" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:onClick="@{() -> viewModel.launchForgotPasswordViewModel()}"
            android:padding="10dp"
            android:text="@string/forgot_password"
            android:textColor="@color/com_facebook_blue"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/button4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/materialCheckBox2" />

        <Button
            android:id="@+id/button3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/com_facebook_blue"
            android:onClick="@{() -> viewModel.createAccount()}"
            android:text="@string/sign_up"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_centerHorizontal="true"
            android:elevation="30dp"
            android:visibility="@{viewModel.isProgressBarLoasing() ? View.VISIBLE : View.GONE}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>