<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:clickable="true"
    android:focusable="true">

    <data>
        <variable
            name="viewModel"
            type="com.stanger.listquest.ui.forgot_password.ForgotPasswordFragmentViewModel" />

        <import type="android.view.View" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/send_date_btn"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:onClick="@{() -> viewModel.doneClicked()}"
            android:src="@drawable/down_chev"
            android:text="@string/done"
            android:tint="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_margin="10dp"
            android:src="@drawable/king"
            app:layout_constraintBottom_toTopOf="@+id/guideline3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/send_date_btn" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.60" />

        <ImageView
            android:id="@+id/signin_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/email"
            android:tint="@color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/forgot_credentials"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            error="@{viewModel.errorEmail}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:hint="@string/email"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/forgot_credentials"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/signin_ic"
            app:layout_constraintTop_toBottomOf="@+id/imageView9">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@={viewModel.email}"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:theme="@style/FirebaseUI.TextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/forgot_credentials"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginBottom="50dp"
            android:background="@color/com_facebook_blue"
            android:onClick="@{() -> viewModel.sendEmail()}"
            android:text="@string/send_password"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>