<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.stanger.listquest.ui.delete_account.DeleteAccountFragmentViewModel" />

        <import type="android.view.View" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageView
            android:id="@+id/imageView11"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_margin="20dp"
            android:onClick="@{() -> viewModel.doneClicked()}"
            android:src="@drawable/down_chev"
            android:tint="#000"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:src="@drawable/crying_queen"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView11" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.5" />

        <ImageView
            android:id="@+id/signin_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/email"
            android:tint="@color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            error="@{viewModel.errorEmail}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/signin_ic"
            app:layout_constraintTop_toTopOf="@+id/guideline4">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:text="@={viewModel.email}"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:theme="@style/FirebaseUI.TextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/lock_ic"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/lock"
            android:tint="@color/darker_gray"
            app:layout_constraintBottom_toBottomOf="@+id/login_password"
            app:layout_constraintStart_toStartOf="@+id/button2"
            app:layout_constraintTop_toTopOf="@+id/login_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/login_password"
            error="@{viewModel.errorPassword}"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:errorEnabled="true"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintEnd_toEndOf="@+id/button2"
            app:layout_constraintStart_toEndOf="@+id/lock_ic"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/dark_gray">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:text="@={viewModel.password}"
                android:textColor="@color/dark_gray"
                android:textColorHint="@color/dark_gray"
                android:theme="@style/FirebaseUI.TextInputEditText" />

        </com.google.android.material.textfield.TextInputLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.7" />

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:background="@color/redTransparent"
            android:onClick="@{() -> viewModel.deleteUser()}"
            android:text="@string/delete_account"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/guideline2" />

        <TextView
            android:id="@+id/forgot_credentials"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#000"
            android:fontFamily="@font/roboto_bold"
            android:onClick="@{() -> viewModel.forgotPassword()}"
            android:padding="20dp"
            android:text="@string/forgot_password"
            android:textColor="@color/dark_blue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button2" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="@{viewModel.isProgressBarLoasing() ? View.VISIBLE : View.GONE}" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>